# LinkedIN_AI_Posts

Financial Article Similarity/backend/notebooks/: chromadbquerytest.ipynb
Financial Article Similarity/data_pipeline/jupyeternotebooks/: embedding_trial.ipynb  webscarping_trials.ipynb
Financial Article Similarity/data_pipeline/processing/: embedder.py  trial.text
Financial Article Similarity/data_pipeline/storage/chromadb/6ace649c-8e94-45ed-9450-2271d23ba252/: index_metadata.pickle
Financial Article Similarity/data_pipeline/storage/raw/CNBC/: cnbc_articles_2000.json
Financial Article Similarity/data_pipeline/storage/raw/financial_times/: financial_times.json
Financial Article Similarity/data_pipeline/web_scraping/src/: cnbc_scraping.py  ft_scrping.py  scraping_main.py  test.py  utils.py
Similarity Search : Ähnlichkeitsuche/: similarity_search.ipynb  ähnlichkeitsuche.ipynb
financial_article_similarity/backend/: pyproject.toml
financial_article_similarity/backend/data_pipeline/processing/: processing_main.py
financial_article_similarity/backend/finartsim/data_pipeline/processing/: embedder.py  processing_main.py
financial_article_similarity/backend/notebooks/: chromadbquerytest.ipynb  embedding_trial.ipynb  webscarping_trials.ipynb
