[project]
name = "finartsim"
version = "0.2.0"
description = "Scrape financial articles, embed titles, and search with ChromaDB"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
scraping = [
    "playwright>=1.40.0",
    "playwright-stealth>=1.0.6",
]
embedding = [
    "numpy>=1.26.0",
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "chromadb>=0.5.0",
    "scikit-learn>=1.4.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]
dev = [
    "ruff>=0.4.0",
]

all = ["finartsim[scraping,embedding,notebooks,dev]"]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["finartsim"]